--- a/mental-health-app/website/profile.html
+++ b/mental-health-app/website/profile.html
@@ -3,98 +3,346 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile - StudentWell</title>
+    <title>Profile | StudentWell</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        body {
+            background: #f7fafd;
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            position: relative;
+        }
+        .profile-bg-img {
+            position: fixed;
+            top: 0; left: 0; width: 100vw; height: 100vh;
+            background: url('./assets/images/profile-background.png') center center/cover no-repeat;
+            z-index: 0;
+            opacity: 1;
+            pointer-events: none;
+        }
+        .profile-page-container {
+            max-width: 700px;
+            margin: 1rem auto;
+            background: #b6deff;
+            border-radius: 18px;
+            box-shadow: 0 4px 24px rgba(89,198,203,0.10);
+            display: flex;
+            flex-direction: row;
+            padding: 2.5rem 2rem;
+            gap: 2rem;
+            position: relative;
+            z-index: 1;
+        }
+        .profile-avatar-col {
+            flex: 0 0 160px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            gap: 1.2rem;
+        }
+        .profile-avatar-large {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #59c6cb;
+            background: #e6f4f5;
+        }
+        .profile-avatar-upload {
+            display: none;
+        }
+        .profile-avatar-btn {
+            background: #fff;
+            color: #59c6cb;
+            border: 1.5px solid #59c6cb;
+            border-radius: 8px;
+            padding: 0.4rem 1.2rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: background 0.2s, color 0.2s;
+        }
+        .profile-avatar-btn:hover {
+            background: #59c6cb;
+            color: #fff;
+        }
+        .profile-fields-col {
+            flex: 1 1 0;
+            display: flex;
+            flex-direction: column;
+            gap: 1.2rem;
+        }
+        .profile-field-label {
+            font-weight: 500;
+            color: #173D7A;
+            margin-bottom: 0.2rem;
+        }
+        .profile-field-input, .profile-field-select {
+            width: 100%;
+            padding: 0.7rem 1rem;
+            border-radius: 10px;
+            border: 1.5px solid #59c6cb;
+            font-size: 1rem;
+            margin-bottom: 0.2rem;
+            background: #f7fafd;
+        }
+        .profile-field-textarea {
+            width: 100%;
+            padding: 0.7rem 1rem;
+            border-radius: 10px;
+            border: 1.5px solid #59c6cb;
+            font-size: 1rem;
+            background: #f7fafd;
+            resize: vertical;
+            min-height: 70px;
+            max-height: 180px;
+        }
+        .profile-save-btn {
+            margin-top: 1.5rem;
+            background: #59c6cb;
+            color: #fff;
+            border: none;
+            border-radius: 10px;
+            padding: 0.8rem 2.2rem;
+            font-size: 1.1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+        .profile-save-btn:hover {
+            background: #173D7A;
+        }
+        .profile-success-msg {
+            color: #2e7d32;
+            font-size: 1rem;
+            margin-top: 0.7rem;
+            display: none;
+        }
+        @media (max-width: 700px) {
+            .profile-page-container {
+                flex-direction: column;
+                padding: 1.2rem;
+                gap: 1.2rem;
+            }
+            .profile-avatar-col {
+                flex-direction: row;
+                justify-content: flex-start;
+                gap: 1.2rem;
+            }
+            .profile-avatar-large {
+                width: 90px;
+                height: 90px;
+            }
+        }
+        .profile-nav-btn {
+            background: #fff;
+            color: #59c6cb;
+            border: 1.5px solid #59c6cb;
+            border-radius: 8px;
+            padding: 0.4rem 1.2rem;
+            font-weight: 500;
+            font-size: 1rem;
+            cursor: pointer;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            transition: background 0.2s, color 0.2s;
+        }
+        .profile-nav-btn:hover {
+            background: #59c6cb;
+            color: #fff;
+        }
+        .profile-nav-bar {
+            position: absolute;
+            top: 2.5rem;
+            left: 2.5rem;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 1rem;
+            z-index: 10;
+        }
+        @media (max-width: 900px) {
+            .profile-nav-bar {
+                position: static;
+                flex-direction: row;
+                justify-content: flex-start;
+                margin-bottom: 1.2rem;
+                gap: 1.2rem;
+            }
+        }
+        .profile-badge {
+            position: absolute;
+            top: 1.2rem;
+            left: 1.2rem;
+            display: flex;
+            align-items: center;
+            gap: 0.7rem;
+            background: #fff;
+            color: #173D7A;
+            border-radius: 25px;
+            padding: 0.4rem 1.1rem 0.4rem 0.6rem;
+            box-shadow: 0 2px 8px rgba(89,198,203,0.10);
+            font-size: 1.08rem;
+            font-weight: 500;
+            z-index: 20;
+            min-width: 120px;
+        }
+        .badge-avatar {
+            width: 38px;
+            height: 38px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid #59c6cb;
+        }
+        .badge-name {
+            font-weight: 600;
+            color: #173D7A;
+            font-size: 1.08rem;
+        }
+        @media (max-width: 700px) {
+            .profile-badge {
+                top: 0.5rem;
+                left: 0.5rem;
+                padding: 0.2rem 0.7rem 0.2rem 0.4rem;
+            }
+            .badge-avatar {
+                width: 28px;
+                height: 28px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <a href="index.html" class="btn secondary" style="position:absolute;left:2rem;top:2rem;">&larr; Home</a>
-        <h1 style="text-align:center;margin-top:2rem;">My Profile</h1>
-    </header>
-    <main>
-        <section class="profile-section" id="profile-section">
-            <div class="profile-card" id="profile-card">
-                <img class="profile-avatar" id="profile-avatar" src="" alt="User Avatar">
-                <div class="profile-info">
-                    <h3 class="profile-name" id="profile-name"></h3>
-                    <p class="profile-email" id="profile-email"></p>
-                    <input type="text" id="edit-username" placeholder="Edit Username" style="display:none;" />
-                    <input type="text" id="edit-avatar" placeholder="Edit Avatar URL" style="display:none;" />
-                    <button class="btn secondary" id="edit-btn">Edit Profile</button>
-                    <button class="btn primary" id="save-btn" style="display:none;">Save</button>
-                    <button class="btn secondary" id="logout-btn">Logout</button>
-                    <p id="profile-error" class="auth-error"></p>
-                </div>
+    <div class="profile-bg-img"></div>
+      <img id="badge-avatar" class="badge-avatar" src="https://randomuser.me/api/portraits/men/32.jpg" alt="User Avatar">
+      <span id="badge-name">Profile</span>
+    </div>
+    <div class="profile-nav-bar">
+        <a href="index.html" class="profile-nav-btn"><i class="fas fa-home"></i> Home</a>
+        <button onclick="window.history.back()" class="profile-nav-btn"><i class="fas fa-arrow-left"></i> Back</button>
+    </div>
+    <div class="profile-page-container">
+        <div class="profile-avatar-col">
+            <img id="profile-avatar-large" class="profile-avatar-large" src="https://randomuser.me/api/portraits/men/32.jpg" alt="User Avatar">
+            <input type="file" id="profile-avatar-upload" class="profile-avatar-upload" accept="image/*">
+            <button class="profile-avatar-btn" id="profile-avatar-btn">Change Avatar</button>
+        </div>
+        <form class="profile-fields-col" id="profile-form" autocomplete="off">
+            <div>
+                <label class="profile-field-label" for="profile-name">Name</label>
+                <input type="text" id="profile-name" class="profile-field-input" maxlength="32" required>
             </div>
-        </section>
-    </main>
+            <div>
+                <label class="profile-field-label" for="profile-dob">Date of Birth</label>
+                <input type="date" id="profile-dob" class="profile-field-input" required>
+            </div>
+            <div>
+                <label class="profile-field-label" for="profile-work">Work</label>
+                <select id="profile-work" class="profile-field-select" required>
+                    <option value="">Select...</option>
+                    <option value="Student">Student</option>
+                    <option value="Office">Office</option>
+                    <option value="Other">Other</option>
+                </select>
+            </div>
+            <div>
+                <label class="profile-field-label" for="profile-about">About Yourself</label>
+                <textarea id="profile-about" class="profile-field-textarea" maxlength="200" placeholder="Tell us about yourself..."></textarea>
+            </div>
+            <div>
+                <label class="profile-field-label" for="profile-location">Location</label>
+                <input type="text" id="profile-location" class="profile-field-input" maxlength="64">
+            </div>
+            <div>
+                <label class="profile-field-label" for="profile-email">Email Address</label>
+                <input type="email" id="profile-email" class="profile-field-input" maxlength="64" required>
+            </div>
+            <button type="submit" class="profile-save-btn">Save Profile</button>
+            <div class="profile-success-msg" id="profile-success-msg">Profile saved!</div>
+        </form>
+    </div>
     <script>
-        // Require login
-        const token = localStorage.getItem('token');
-        if (!token) window.location.href = 'login.html';
-        const username = localStorage.getItem('username');
-        const avatar = localStorage.getItem('avatar');
-        document.getElementById('profile-name').textContent = username;
-        document.getElementById('profile-avatar').src = avatar || 'https://ui-avatars.com/api/?name=' + encodeURIComponent(username || 'U');
-        // Fetch email from backend
-        fetch('http://localhost:3001/api/me', {
-            headers: { 'Authorization': 'Bearer ' + token }
-        })
-        .then(res => res.json())
-        .then(data => {
-            document.getElementById('profile-email').textContent = data.email || '';
-        });
-        // Edit profile
-        const editBtn = document.getElementById('edit-btn');
-        const saveBtn = document.getElementById('save-btn');
-        const editUsername = document.getElementById('edit-username');
-        const editAvatar = document.getElementById('edit-avatar');
-        editBtn.onclick = () => {
-            editUsername.style.display = 'block';
-            editAvatar.style.display = 'block';
-            saveBtn.style.display = 'inline-block';
-            editBtn.style.display = 'none';
-            editUsername.value = username;
-            editAvatar.value = avatar;
-        };
-        saveBtn.onclick = async () => {
-            const newUsername = editUsername.value;
-            const newAvatar = editAvatar.value;
-            const error = document.getElementById('profile-error');
-            error.textContent = '';
-            try {
-                const res = await fetch('http://localhost:3001/api/me', {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': 'Bearer ' + token
-                    },
-                    body: JSON.stringify({ username: newUsername, avatar: newAvatar })
-                });
-                const data = await res.json();
-                if (res.ok) {
-                    localStorage.setItem('username', data.username);
-                    localStorage.setItem('avatar', data.avatar || '');
-                    document.getElementById('profile-name').textContent = data.username;
-                    document.getElementById('profile-avatar').src = data.avatar || 'https://ui-avatars.com/api/?name=' + encodeURIComponent(data.username || 'U');
-                    editUsername.style.display = 'none';
-                    editAvatar.style.display = 'none';
-                    saveBtn.style.display = 'none';
-                    editBtn.style.display = 'inline-block';
-                } else {
-                    error.textContent = data.message || 'Update failed';
-                }
-            } catch {
-                error.textContent = 'Network error';
+        // Profile Page Logic
+        const avatarImg = document.getElementById('profile-avatar-large');
+        const avatarUpload = document.getElementById('profile-avatar-upload');
+        const avatarBtn = document.getElementById('profile-avatar-btn');
+        const form = document.getElementById('profile-form');
+        const nameInput = document.getElementById('profile-name');
+        const dobInput = document.getElementById('profile-dob');
+        const workInput = document.getElementById('profile-work');
+        const aboutInput = document.getElementById('profile-about');
+        const locationInput = document.getElementById('profile-location');
+        const emailInput = document.getElementById('profile-email');
+        const successMsg = document.getElementById('profile-success-msg');
+
+        // Load profile from localStorage
+        function loadProfile() {
+            const data = JSON.parse(localStorage.getItem('profilePageData') || '{}');
+            if (data.avatar) avatarImg.src = data.avatar;
+            if (data.name) nameInput.value = data.name;
+            if (data.dob) dobInput.value = data.dob;
+            if (data.work) workInput.value = data.work;
+            if (data.about) aboutInput.value = data.about;
+            if (data.location) locationInput.value = data.location;
+            if (data.email) emailInput.value = data.email;
+        }
+
+        // Save profile to localStorage
+        function saveProfile() {
+            const data = {
+                avatar: avatarImg.src,
+                name: nameInput.value.trim(),
+                dob: dobInput.value,
+                work: workInput.value,
+                about: aboutInput.value.trim(),
+                location: locationInput.value.trim(),
+                email: emailInput.value.trim()
+            };
+            localStorage.setItem('profilePageData', JSON.stringify(data));
+        }
+
+        // Avatar upload
+        avatarBtn.onclick = () => avatarUpload.click();
+        avatarUpload.onchange = function() {
+            const file = this.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    avatarImg.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
             }
         };
-        // Logout
-        document.getElementById('logout-btn').onclick = () => {
-            localStorage.clear();
-            window.location.href = 'login.html';
+
+        // Form submit
+        form.onsubmit = function(e) {
+            e.preventDefault();
+            saveProfile();
+            successMsg.style.display = 'block';
+            setTimeout(() => { successMsg.style.display = 'none'; }, 1500);
         };
+
+        // On page load
+        loadProfile();
+
+        // Profile Badge Logic
+        (function() {
+            const badgeAvatar = document.getElementById('badge-avatar');
+            const badgeName = document.getElementById('badge-name');
+            function updateBadge() {
+                const data = JSON.parse(localStorage.getItem('profilePageData') || '{}');
+                if (data.avatar) badgeAvatar.src = data.avatar;
+                else badgeAvatar.src = 'https://randomuser.me/api/portraits/men/32.jpg';
+                badgeName.textContent = data.name && data.name.trim() ? data.name : 'Profile';
+            }
+            updateBadge();
+            window.addEventListener('storage', updateBadge);
+        })();
     </script>
 </body>
 </html> 
