--- a/mental-health-app/website/index.html
+++ b/mental-health-app/website/index.html
@@ -10,21 +10,28 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
+    <div id="animated-bg" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:-1;"></div>
+    <div id="bg-switcher" style="position:fixed;top:1rem;right:1rem;z-index:1000;display:flex;gap:0.5rem;">
+      <button onclick="setBg('waves')" class="btn secondary" style="padding:0.4rem 1rem;">Waves</button>
+      <button onclick="setBg('net')" class="btn secondary" style="padding:0.4rem 1rem;">Blobs/Net</button>
+      <button onclick="setBg('particles')" class="btn secondary" style="padding:0.4rem 1rem;">Particles</button>
+    </div>
     <header>
+        <div id="birds-bg" style="position:relative; min-height:320px; overflow:hidden; display:flex; flex-direction:column; align-items:center; justify-content:center;">
+          <div class="logo" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+            <img src="assets/images/Screenshot 2025-05-16 120317.png" alt="StudentWell Logo">
+          </div>
+          <p class="tagline">Supporting Student Mental Health Together</p>
+        </div>
         <a class="profile-top-btn" href="profile.html">
             <img class="profile-top-avatar" src="https://randomuser.me/api/portraits/men/32.jpg" alt="User Avatar">
             <span class="profile-top-name">Profile</span>
         </a>
-        <div class="logo" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
-            <img src="assets/images/Screenshot 2025-05-16 120317.png" alt="StudentWell Logo">
-        </div>
-        <p class="tagline">Supporting Student Mental Health Together</p>
         <nav>
             <ul>
                 <li><a href="#about"><i class="fas fa-info-circle"></i> About Us</a></li>
                 <li><a href="#features"><i class="fas fa-star"></i> Features</a></li>
                 <li><a href="group-chat.html"><i class="fas fa-comments"></i> Group Chat</a></li>
-                <li><a href="#Your-Mental-Health-Matters"><i class="fas fa-users"></i> Your Mental Health Matters</a></li>
                 <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </nav>
@@ -52,18 +59,7 @@
             </div>
         </div>
     </section>
-    <section class="breath-section" data-aos="fade-up">
-        <h2>Breath With Me</h2>
-        <div class="breath-container">
-            <div class="breath-rings">
-                <div class="breath-ring ring1"></div>
-                <div class="breath-ring ring2"></div>
-                <div class="breath-ring ring3"></div>
-            <div class="breath-circle"></div>
-            </div>
-            <p class="breath-text">Breathe In</p>
-        </div>
-    </section>
+
     <main>
         <section id="features" data-aos="fade-up">
             <h2>Features</h2>
@@ -145,22 +141,6 @@
                 </div>
             </div>
         </section>
-        <section class="hero">
-            <div class="hero-content" data-aos="fade-up">
-                <h2>Your Mental Health Matters</h2>
-                <p>Join a supportive community of students who understand the challenges of academic life.</p>
-                <div class="cta-buttons">
-                    <a href="#signup" class="btn primary">Get Started</a>
-                    <a href="#learn-more" class="btn secondary">Learn More</a>
-                </div>
-            </div>
-            <div class="hero-image" data-aos="fade-left">
-                <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Students studying">
-            </div>
-        </section>
-
-
-
         <section id="contact" data-aos="fade-up">
             <h2>Contact Us</h2>
             <div class="contact-container">
@@ -1798,6 +1778,85 @@
         updateHeaderBadge();
         window.addEventListener('storage', updateHeaderBadge);
     })();
+    </script>
+    <!-- Add these scripts before </body> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script>
+    let vantaEffect = null;
+    function destroyVanta() {
+      if (vantaEffect && typeof vantaEffect.destroy === "function") {
+        vantaEffect.destroy();
+        vantaEffect = null;
+      }
+    }
+    function setBg(type) {
+      destroyVanta();
+      document.getElementById('animated-bg').innerHTML = '';
+      if (type === 'waves') {
+        vantaEffect = VANTA.WAVES({
+          el: "#animated-bg",
+          color: 0x59c6cb,
+          shininess: 50,
+          waveHeight: 20,
+          waveSpeed: 1,
+          zoom: 0.85
+        });
+      } else if (type === 'net') {
+        vantaEffect = VANTA.NET({
+          el: "#animated-bg",
+          color: 0x59c6cb,
+          backgroundColor: 0xf6f8fc,
+          points: 12.0,
+          maxDistance: 22.0,
+          spacing: 18.0
+        });
+      } else if (type === 'particles') {
+        particlesJS('animated-bg', {
+          "particles": {
+            "number": {"value": 60,"density": {"enable": true,"value_area": 800}},
+            "color": {"value": "#59c6cb"},
+            "shape": {"type": "circle"},
+            "opacity": {"value": 0.5,"random": false},
+            "size": {"value": 4,"random": true},
+            "line_linked": {"enable": true,"distance": 150,"color": "#59c6cb","opacity": 0.4,"width": 1},
+            "move": {"enable": true,"speed": 2,"direction": "none","random": false,"straight": false,"out_mode": "out"}
+          },
+          "interactivity": {
+            "detect_on": "canvas",
+            "events": {
+              "onhover": {"enable": true,"mode": "repulse"},
+              "onclick": {"enable": true,"mode": "push"},
+              "resize": true
+            },
+            "modes": {
+              "repulse": {"distance": 100,"duration": 0.4},
+              "push": {"particles_nb": 4}
+            }
+          },
+          "retina_detect": true
+        });
+      }
+    }
+    // Set default background
+    setBg('waves');
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+    <script>
+    VANTA.BIRDS({
+      el: "#birds-bg",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 0,
+      scaleMobile: 1.00,    
+      backgroundColor: 0x59c6cb
+      
+    })
     </script>
 </body>
 </html> 
